# LibSWIFFT

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CODE-DESIGN.md  CONTRIBUTING.md  Dockerfile  Dockerfile.compare-to-K2SN-MSS  Doxyfile  LICENSE.txt  NOTICE.md  README.md  RELEASE-CHECKLIST.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: new-code.yml
cmake/: flink.cmake  swifft_defaults.cmake
docs/: about.rst  api-guide.rst  code-design.rst  code-of-conduct.rst  community-guide.rst  conf.py  contributor-guide.rst  index.rst  rationale.rst  requirements.txt  user-guide.rst
include/libswifft/: common.h  swifft.h  swifft.hpp  swifft_api.inl  swifft_arith_api.inl  swifft_avx.h  swifft_avx2.h  swifft_avx512.h  swifft_common.h  swifft_fft_api.inl  swifft_hash_api.inl  swifft_iset.inl  swifft_object.h  swifft_object_iset.inl  swifft_ver.h
paper/: paper.bib  paper.md
src/: CMakeLists.txt  swifft.c  swifft.inl  swifft_avx.c  swifft_avx2.c  swifft_avx512.c  swifft_impl.inl  swifft_keygen.cpp  swifft_object.c  swifft_object.inl  swifft_ops.inl  transpose_8x8_16_sse2.inl
test/: CMakeLists.txt  catch_main.cpp  swifft_catch.cpp  swifft_io.cpp  swifft_io.hpp  testcommon.h
